--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,26 +219,26 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogue/DialogueWidget
+MRUItem0=/Game/Levels/PersistentLevel
 MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem3=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem4=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem5=/Game/ParticleSystems/A_Ripples
-MRUItem6=/Game/Audio/SFX/Wavs/FX_Wade
-MRUItem7=/Game/Audio/SFX/Wavs/FX_WetSplat
-MRUItem8=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem9=/Game/Blueprints/AOE/Projectile/AOEWorks
-MRUItem10=/Game/A_Water
-MRUItem11=/Game/ParticleSystems/SM_WaterFall_L_Blueprint
-MRUItem12=/Game/ParticleSystems/A_Splash
-MRUItem13=/Niagara/Modules/Update/Size/ScaleSpriteSize
-MRUItem14=/Niagara/Modules/Update/Forces/GravityForce
-MRUItem15=/Game/ParticleSystems/NS_Splash
-MRUItem16=/Game/ParticleSystems/NS_Ripples
-MRUItem17=/Game/Materials/Mat_Ripples
-MRUItem18=/Game/ParticleSystems/NE_Ripples
-MRUItem19=/Game/ParticleSystems/NS_WaterFall_Short
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Dialogue/DialogueWidget
+MRUItem4=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem5=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem6=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem7=/Game/ParticleSystems/A_Ripples
+MRUItem8=/Game/Audio/SFX/Wavs/FX_Wade
+MRUItem9=/Game/Audio/SFX/Wavs/FX_WetSplat
+MRUItem10=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem11=/Game/Blueprints/AOE/Projectile/AOEWorks
+MRUItem12=/Game/A_Water
+MRUItem13=/Game/ParticleSystems/SM_WaterFall_L_Blueprint
+MRUItem14=/Game/ParticleSystems/A_Splash
+MRUItem15=/Niagara/Modules/Update/Size/ScaleSpriteSize
+MRUItem16=/Niagara/Modules/Update/Forces/GravityForce
+MRUItem17=/Game/ParticleSystems/NS_Splash
+MRUItem18=/Game/ParticleSystems/NS_Ripples
+MRUItem19=/Game/Materials/Mat_Ripples
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -4455,11 +4455,11 @@ SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" 
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.IsSaveActive\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.ColorNPCText\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.ColorNPCText\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -7022,10 +7022,10 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/PersistentLevel
-MRUItem2=/Game/Levels/Castle
-MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Levels/Castle
 MRUItem4=/Game/Movies/CutsceneLvl6
 MRUItem5=/Game/Movies/CutsceneLvl5
 MRUItem6=/Game/Movies/CutsceneLvl4
@@ -7355,7 +7355,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
+CapsuleComponent=
 SkeletalMeshComponent=
 PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Rendering.LOD,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
@@ -7370,7 +7370,7 @@ GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Rendering.LOD,
 PrimitiveComponent=StaticMeshActor.Rendering.LOD,
 Actor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,StaticMeshActor.Rendering.LOD,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,SphereComponent.Collision.Collision,
 AO1E_C=
 disappear_cube_blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 AOE_Magenta_C=
