--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Gnome_Animated/ChefGnome
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -215,30 +215,32 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Geometry/Meshes/Plants/ReactivePlant.ReactivePlant
+OpenAssetsAtExit=/Game/Castle/Door.Door
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogue/DialogueWidget
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem3=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem4=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem5=/Game/ParticleSystems/A_Ripples
-MRUItem6=/Game/Audio/SFX/Wavs/FX_Wade
-MRUItem7=/Game/Audio/SFX/Wavs/FX_WetSplat
-MRUItem8=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem9=/Game/Blueprints/AOE/Projectile/AOEWorks
-MRUItem10=/Game/A_Water
-MRUItem11=/Game/ParticleSystems/SM_WaterFall_L_Blueprint
-MRUItem12=/Game/ParticleSystems/A_Splash
-MRUItem13=/Niagara/Modules/Update/Size/ScaleSpriteSize
-MRUItem14=/Niagara/Modules/Update/Forces/GravityForce
-MRUItem15=/Game/ParticleSystems/NS_Splash
-MRUItem16=/Game/ParticleSystems/NS_Ripples
-MRUItem17=/Game/Materials/Mat_Ripples
-MRUItem18=/Game/ParticleSystems/NE_Ripples
-MRUItem19=/Game/ParticleSystems/NS_WaterFall_Short
+MRUItem0=/Game/Castle/Door
+MRUItem1=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem2=/Game/Dialogue/DialogueWidget
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem5=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem6=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem7=/Game/ParticleSystems/A_Ripples
+MRUItem8=/Game/Audio/SFX/Wavs/FX_Wade
+MRUItem9=/Game/Audio/SFX/Wavs/FX_WetSplat
+MRUItem10=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem11=/Game/Blueprints/AOE/Projectile/AOEWorks
+MRUItem12=/Game/A_Water
+MRUItem13=/Game/ParticleSystems/SM_WaterFall_L_Blueprint
+MRUItem14=/Game/ParticleSystems/A_Splash
+MRUItem15=/Niagara/Modules/Update/Size/ScaleSpriteSize
+MRUItem16=/Niagara/Modules/Update/Forces/GravityForce
+MRUItem17=/Game/ParticleSystems/NS_Splash
+MRUItem18=/Game/ParticleSystems/NS_Ripples
+MRUItem19=/Game/Materials/Mat_Ripples
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -7037,7 +7039,7 @@ MRUItem11=/Game/Levels/NewMap
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
